Trying to resolve some issues.

--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,5 @@ author:
 
 github:           https://github.com/tslamic/
 linkedin:         http://ie.linkedin.com/in/tadejslamic/
+
+baseurl:          '/'
