--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url:
 owner:
   name:           Tadej Slamic
   avatar:         selfie.jpg
-  bio:            "I'm a code monkey from Slovenia, currently living in Dublin. I love code, coffee and traveling."
+  bio:            "I'm a code monkey from Slovenia, living in London. I love code, coffee and traveling."
   email:          
   # Social networking links used in footer. Update and remove as you like.
   twitter:        
