--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ bing_verify:
 timezone:    America/New_York
 future:      true
 highlighter: rouge
-markdown:    redcarpet
+markdown:    kramdown
 sass:
   sass_dir: _sass
   style: compressed
